--- a/form.html
+++ b/form.html
@@ -51,23 +51,77 @@
 		<h2 id="contact">Contact Me</h2>
 		<main class="container1" id="mainContent">
 
-<!--form goes here-->
+			<!--form goes here-->
+			<form role="form" class="form">
+				<fieldset>
+					<legend>Have a questions?</legend>
+					<label class="col-md-4 control-label" for="Name"></label>
+					<input id="Name" name="Name" type="text" placeholder="Name" class="form-control input-md" required="">
+				</fieldset>
+				<fieldset>
+					<label class="col-md-4 control-label" for="surname"></label>
+					<input id="surname" name="surname" type="text" placeholder="Surname" class="form-control input-md" required="">
+				</fieldset>
+				<fieldset>
+					<label class="col-md-4 control-label" for="email"></label>
+					<input id="email" name="email" type="text" placeholder="E-mail" class="form-control input-md" required="">
+				</fieldset>
+				<fieldset>
+					<label class="col-md-4 control-label" for="telephone"></label>
+					<input id="telephone" name="telephone" type="text" placeholder="Telephone" class="form-control input-md" required="">
+				</fieldset>
+				<fieldset>
+					<label class="col-md-4 control-label" for="textinput"></label>
+					<textarea class="form-control" id="textarea" name="textarea">Message</textarea>
+					<input type="button" class="btn btn-default" onclick="location.href='index.html';" value="Send" />
+				</fieldset>
+			</form>
+
+			<h2 id="touch">Get In Touch!</h2>
+			<section class="contact">
+
+				<div id="mobile">
+
+					<span class="contact_icon"><i class="fa fa-phone fa-4x"></i></span>
+					<h3>Call Me</h3>
+					<p>
+						(Mob) <a href="tel:+17059700412" title="Mobile Number">+1 705 970 0412</a>
+					</p>
+				</div>
+				<!--div#mobile-->
+				<div id="email">
+					<span class="contact_icon"><i class="fa fa-envelope fa-4x"></i></span>
+					<h3>E-mail Me</h3>
+					<p>
+						<a href="mailto:hanvinder@gmail.com" title="Mail" ">hanvinder@gmail.com</a>
+		 </p>
+		 </div><!--div#email-->
+		 
+		 <div id="skype ">
+		 <span class="contact_icon "><i class="fa fa-skype fa-4x "></i></span>
+		<h3>Skype Me</h3>
+		<p>
+<a href="skype:hanvinder.rai " title="Skype ">hanvinder.rai</a>
+		 </p>
+		 </div><!--div#skype-->
+		</section>
 		</main>
 		<!--JavaScript Section-->
-		<!--<script src="Script/lib/jquery-2.2.0.min.js"></script>
-	<script src="Script/lib/bootstrap.min.js"></script>
-	<script src="Script/app.js"></script>-->
+		<!--<script src="Script/lib/jquery-2.2.0.min.js "></script>
+	<script src="Script/lib/bootstrap.min.js "></script>
+	<script src="Script/app.js "></script>-->
 	</article>
 
 
 	<footer>
-		<p id="footer"> ©2016 Hanvinder Singh Rai</p>
-		<!--<p class="social">flgi</p>-->
+		<p id="footer "> ©2016 Hanvinder Singh Rai</p>
+		<!--<p class="social ">flgi</p>-->
 		<p>
-			<a href="https://www.facebook.com/honeysingh.rai1" title="Facebook"><span class="contact_icon"><i class="fa fa-facebook fa-2x"></i></span></a>
-			<a href="#" title="Instagram"><span class="contact_icon"><i class="fa fa-instagram fa-2x"></i></span></a>
-			<a href="#" title="Twitter"><span class="contact_icon"><i class="fa fa-twitter fa-2x"></i></span></a>
-			<a href="#" title="Google"><span class="contact_icon"><i class="fa fa-google fa-2x"></i></span></a></p>
+			<a href="https://www.facebook.com/honeysingh.rai1 " title="Facebook "><span class="contact_icon "><i class="fa fa-facebook
+						fa-2x "></i></span></a>
+			<a href="# " title="Instagram "><span class="contact_icon "><i class="fa fa-instagram fa-2x "></i></span></a>
+			<a href="# " title="Twitter "><span class="contact_icon "><i class="fa fa-twitter fa-2x "></i></span></a>
+			<a href="# " title="Google "><span class="contact_icon "><i class="fa fa-google fa-2x "></i></span></a></p>
 	</footer>
 </body>
 
