--- a/project.html
+++ b/project.html
@@ -51,6 +51,26 @@
 		<h2 id="project"></h2>
 		<main class="container3" id="mainContent">
 			<!--Project links here-->
+			<h1 id="work"></h1>
+
+			<section class="box">
+				<div id="project1">
+					<a href="http://www.gc200329194.computerstudi.es/as1/"><img class="banner" src="images/project1.PNG" alt="Logo"></a>
+					<p id="firstProject"></p>
+				</div>
+				<div id="project2">
+					<a href="http://www.gc200329194.computerstudi.es/project/"><img class="banner" src="images/project2.PNG" alt="Logo"></a>
+					<p id="secondProject"></p>
+				</div>
+				<div id="project3">
+					<a href="http://www.gc200329194.computerstudi.es/semester1/as2/as.html"><img class="banner" src="images/project3.PNG" alt="Logo"></a>
+					<p id="thirdProject"></p>
+				</div>
+				</div>
+			</section>
+
+			<!--<a  href="#"><img id="temp4" class="banner"  src="images/project4.PNG" alt="Logo" style="width:175px;height:175px;"></a>-->
+			<!--<a  href="#"><img id="temp5" class="banner"  src="images/project5.PNG" alt="Logo" style="width:175px;height:175px;"></a>-->
 
 		</main>
 
