--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
 
 		<h2 id="contact">Contact Me</h2>
 		<main class="container1" id="mainContent">
-
+<!--form for message-->
 			<form role="form" class="form">
 				<fieldset>
 					<legend>Have a questions?</legend>
@@ -114,7 +114,7 @@
  
  <footer>
 	 <p id="footer "> ©2016 Hanvinder Singh Rai</p>
-	 <!--<p class="social ">flgi</p>-->
+	 
 		<p>
 <a href="https://www.facebook.com/honeysingh.rai1 " title="Facebook "><span class="contact_icon "><i class="fa fa-facebook
 						fa-2x "></i></span></a>
