--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
 	<title>Portfolio</title>
 </head>
 
-<body class="rai">
+<body id="contact">
 	
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
@@ -72,7 +72,8 @@
 		<fieldset>
 				<label class="col-md-4 control-label" for="textinput"></label>  
 				<textarea class="form-control" id="textarea" name="textarea">Message</textarea>
-				<input type="button" class="btn btn-default" onclick="location.href='index.html';" value="Send" />
+				<!--<input type="button" class="btn btn-default" onclick="location.href='index.html';" value="Send" />-->
+				<button id="submitButton" type="submit" class="btn btn-default">Submit</button>
 		</fieldset>
 		</form>
 		
@@ -105,9 +106,9 @@
 		</section>
 	</main>
 		<!--JavaScript Section-->
-	<!--<script src="Script/lib/jquery-2.2.0.min.js"></script>
+	<script src="Script/lib/jquery-2.2.0.min.js"></script>
 	<script src="Script/lib/bootstrap.min.js"></script>
-	<script src="Script/app.js"></script>-->
+	<script src="Script/app3.js"></script>
 	</article>
  
  
