--- a/project.html
+++ b/project.html
@@ -78,7 +78,7 @@
 		<script src="Script/lib/jquery-2.2.0.min.js"></script>
 		<script src="Script/lib/bootstrap.min.js"></script>
 		<script src="Script/app.js"></script>
-		<!--<script src="Script/app1.js"></script>-->
+		<script src="Script/app1.js"></script>
 	</article>
 
 
