--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body>
+<body id="about">
 
 	<nav class="navbar navbar-default ">
 		<div class="container-fluid">
@@ -59,6 +59,7 @@
 		<script src="Script/lib/jquery-2.2.0.min.js"></script>
 		<script src="Script/lib/bootstrap.min.js"></script>
 		<script src="Script/app.js"></script>
+		<script src="Script/app3.js"></script>
 	</article>
 </body>
 
