--- a/project.html
+++ b/project.html
@@ -77,7 +77,7 @@
 		<!--JavaScript Section-->
 		<script src="Script/lib/jquery-2.2.0.min.js"></script>
 		<script src="Script/lib/bootstrap.min.js"></script>
-		<script src="Script/app.js"></script>
+		<script src="Script/app3.js"></script>
 		<script src="Script/app1.js"></script>
 	</article>
 
