--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li ><a href="index.html">About Me</a></li>
 					<li><a href="project.html">My Project</a></li>
-					<li><a href="form.html">Contact Me</a></li>
+					<li class="active"><a href="form.html">Contact Me</a></li>
 						</ul>
 					</li>
 				</ul>
