--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html">About Me</a></li>
+					<li class="active"><a href="index.html">About Me</a></li>
 					<li><a href="project.html">My Project</a></li>
 					<li><a href="form.html">Contact Me</a></li>
 				</ul>
