--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html"><img src="images/LOGO.PNG" alt="Logo" style="width:75px;height:55px;">
+				<a class="navbar-brand" href="index.html"><img src="images/LOGO.PNG" alt="Logo" ">
 </a>
 			</div>
 
