--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 		<h2>Welcome</h2>
 		<main class="container" id="mainContent">
 			<h1 id="name"></h1>
-			<p id="firstParagraph"></p>
-			<p id="secondParagraph"></p>
-			<p id="thirdParagraph"></p>
+			<p id="Paragraph1"></p>
+			<p id="Paragraph2"></p>
+			<p id="Paragraph3"></p>
 
 		</main>
 		</article>
