--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<article class="profile">
 		<h2>Welcome</h2>
 		<main class="container" id="mainContent">
-			<h1 id="name"></h1>
+			<h1 id="name">Hanvinder Singh Rai</h1>
 			<p id="Paragraph1"></p>
 			<p id="Paragraph2"></p>
 			<p id="Paragraph3"></p>
