--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<!--JavaScript Section-->
 		<script src="Script/lib/jquery-2.2.0.min.js"></script>
 		<script src="Script/lib/bootstrap.min.js"></script>
-		<script src="Script/app.js"></script>
+		<script src="Script/projects.js"></script>
 		
 	
 </body>
