index page modify

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 		<h2>Welcome</h2>
 		<main class="container" id="mainContent">
 			<h1 id="name">Hanvinder Singh Rai</h1>
-			<p id="Paragraph1"></p>
-			<p id="Paragraph2"></p>
-			<p id="Paragraph3"></p>
+			<p id="paragraph1"></p>
+			<p id="paragraph2"></p>
+			<p id="paragraph3"></p>
 
 		</main>
 		</article>
