project page update

--- a/project.html
+++ b/project.html
@@ -48,23 +48,23 @@
 	</nav>
 	<article>
 
-		<h2 id="project"></h2>
+		<h2 id="project">Project</h2>
 		<main class="container3" id="mainContent">
 			<!--Project links here-->
-			<h1 id="work"></h1>
+			<h1 id="work">Work</h1>
 
 			<section class="box">
 				<div id="project1">
 					<a href="http://www.gc200329194.computerstudi.es/as1/"><img class="banner" src="images/project1.PNG" alt="Logo"></a>
-					<p id="firstProject"></p>
+					<p id="paragraph1"></p>
 				</div>
 				<div id="project2">
 					<a href="http://www.gc200329194.computerstudi.es/project/"><img class="banner" src="images/project2.PNG" alt="Logo"></a>
-					<p id="secondProject"></p>
+					<p id="paragraph2"></p>
 				</div>
 				<div id="project3">
 					<a href="http://www.gc200329194.computerstudi.es/semester1/as2/as.html"><img class="banner" src="images/project3.PNG" alt="Logo"></a>
-					<p id="thirdProject"></p>
+					<p id="paragraph3"></p>
 				</div>
 				</div>
 			</section>
