--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 		<script src="Script/app3.js"></script>
 	
 </body>
-
+<a href="http://hanvinder.azurewebsites.net/index.html" target="_blank">
+  <div id="container" title="Vist my new Portfolio">
+    <div id="fab"></div>
+  </div></a>
 <footer>
 	<p> ©2016 Hanvinder Singh Rai</p>
 
