--- a/project.html
+++ b/project.html
@@ -80,7 +80,10 @@
 		<script src="Script/app3.js"></script>
 		<script src="Script/app1.js"></script>
 	
-
+<a href="http://hanvinder.azurewebsites.net/index.html" target="_blank">
+  <div id="container" title="Vist my new Portfolio">
+    <div id="fab"></div>
+  </div></a>
 
 	<footer>
 		<p id="footer">©2016 Hanvinder Singh Rai</p>
