--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html"><img src="images/LOGO.PNG" alt="Logo" style="width:75px;height:55px;">
+				<a class="navbar-brand" href="index.html"><img src="images/LOGO.PNG" alt="Logo" ">
 </a>
 			</div>
 
@@ -108,7 +108,10 @@
 	</article>
 		
  
- 
+ <a href="http://hanvinder.azurewebsites.net/index.html" target="_blank">
+  <div id="container" title="Vist my new Portfolio">
+    <div id="fab"></div>
+  </div></a>
  <footer>
 	 <p id="footer"> ©2016 Hanvinder Singh Rai</p>
 	 <!--<p class="social">flgi</p>-->
